# hs-downloader

./: Download.hs  LICENSE.md  Main.hs  ProgressBar.hs  README.md  hdownload.cabal  index.html  params.json
Network/HTTP/: Downloader.hs
src/: Download.hs  Main.hs  ProgressBar.hs  Types.hs
