Name:                hdownload
Version:             0.1
Description:         Multipart thread file downloader
License:             MIT
License-file:        LICENSE.md
Author:              Gabriele Carrettoni
Maintainer:          gabriele.carrettoni@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.8
Executable hdownload
  Main-is:           Main.hs
  Build-Depends:     base >= 4 && < 5
               ,     http-conduit >= 1.4.1.1
               ,     bytestring >= 0.9
               ,     directory >= 1.1
               ,     lifted-base >= 0.1
               ,     case-insensitive >= 0.4
               ,     mtl >= 2.0
               ,     conduit >= 0.4.1.1
               ,     http-types >= 0.6